--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -8,18 +8,18 @@ buildscript {
 }
 apply plugin: 'android'
 
-dependencies {
-    compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
-    compile 'io.github.johnkil:android-appmsg:1.1'
-}
-
 repositories {
     mavenCentral()
 }
 
+dependencies {
+    compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
+    compile 'com.github.johnkil.android-appmsg:appmsg:1.1.1'
+}
+
 android {
     compileSdkVersion 18
-    buildToolsVersion "18.0.1"
+    buildToolsVersion "18.1.0"
 
     defaultConfig {
         minSdkVersion 7
