--- a/samples/stock/src/main/AndroidManifest.xml
+++ b/samples/stock/src/main/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="io.github.johnkil.appmsg.gradle_sample"
-          android:versionCode="2"
-          android:versionName="1.0.1">
+          package="io.github.johnkil.appmsg.gradle_sample.stock"
+          android:versionCode="1"
+          android:versionName="1.0">
 
     <uses-sdk
-            android:minSdkVersion="7"
-            android:targetSdkVersion="18"/>
+            android:minSdkVersion="14"
+            android:targetSdkVersion="19"/>
 
     <application
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Sherlock.Light.DarkActionBar">
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
